--- a/Gulf-futureWeb/DataController/DataController.csproj
+++ b/Gulf-futureWeb/DataController/DataController.csproj
@@ -56,6 +56,9 @@
       <DependentUpon>db.tt</DependentUpon>
     </Compile>
     <Compile Include="Class1.cs" />
+    <Compile Include="ContactUs.cs">
+      <DependentUpon>db.tt</DependentUpon>
+    </Compile>
     <Compile Include="Contury.cs">
       <DependentUpon>db.tt</DependentUpon>
     </Compile>
@@ -81,6 +84,11 @@
       <DependentUpon>db.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="RealStatProfile.cs">
       <DependentUpon>db.tt</DependentUpon>
     </Compile>
@@ -105,15 +113,16 @@
       <LastGenOutput>db.Context.cs</LastGenOutput>
       <DependentUpon>db.edmx</DependentUpon>
     </None>
-    <None Include="db.edmx.diagram">
-      <DependentUpon>db.edmx</DependentUpon>
-    </None>
     <None Include="db.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>db.cs</LastGenOutput>
       <DependentUpon>db.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="db.edmx.sql" />
