Resolve Jquery Problem

--- a/Gulf-futureWeb/WebSite/Web.config
+++ b/Gulf-futureWeb/WebSite/Web.config
@@ -42,7 +42,7 @@
     </providers>
   </entityFramework>
 <connectionStrings>
-  <add name="dbContext" connectionString="metadata=res://*/db.csdl|res://*/db.ssdl|res://*/db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SEZER-PC;initial catalog=Web_Gulf-Future;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <add name="dbContext" connectionString="metadata=res://*/db.csdl|res://*/db.ssdl|res://*/db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=OMAN\SQLEXPRESS;initial catalog=Web_Gulf-Future;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings>
 
 </configuration>
