--- a/Gulf-futureWeb/WebSite/WebSite.csproj
+++ b/Gulf-futureWeb/WebSite/WebSite.csproj
@@ -38,7 +38,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.Data.v13.2, Version=13.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.1.0\lib\net40\EntityFramework.dll</HintPath>
@@ -1485,6 +1484,7 @@
     <Content Include="Scripts\jquery-2.1.0.js" />
     <Content Include="Scripts\jquery-2.1.0.min.js" />
     <Content Include="Service\GulfService.asmx" />
+    <Content Include="Service\testWeb.asmx" />
     <Content Include="styles\Black\editor.png" />
     <Content Include="styles\Black\imagebrowser.png" />
     <Content Include="styles\Black\loading-image.gif" />
@@ -2627,6 +2627,10 @@
       <DependentUpon>GulfService.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Service\testWeb.asmx.cs">
+      <DependentUpon>testWeb.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -2902,13 +2906,13 @@
     <Folder Include="Resources\Uploads\Media\" />
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\DataController\DataController.csproj">
       <Project>{9aab9e46-572d-44d9-b3a1-b694c1e944ec}</Project>
       <Name>DataController</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
