--- a/Gulf-futureWeb/DataController/DataController.csproj
+++ b/Gulf-futureWeb/DataController/DataController.csproj
@@ -84,6 +84,9 @@
     <Compile Include="OurService.cs">
       <DependentUpon>db.tt</DependentUpon>
     </Compile>
+    <Compile Include="PhotoGellary.cs">
+      <DependentUpon>db.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
