--- a/Gulf-futureWeb/DataController/DataController.csproj
+++ b/Gulf-futureWeb/DataController/DataController.csproj
@@ -81,6 +81,9 @@
     <Compile Include="Location.cs">
       <DependentUpon>db.tt</DependentUpon>
     </Compile>
+    <Compile Include="OurNews.cs">
+      <DependentUpon>db.tt</DependentUpon>
+    </Compile>
     <Compile Include="OurService.cs">
       <DependentUpon>db.tt</DependentUpon>
     </Compile>
@@ -133,9 +136,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="db.edmx.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
