--- a/Gulf-futureWeb/WebSite/Web.config
+++ b/Gulf-futureWeb/WebSite/Web.config
@@ -29,9 +29,12 @@
         <add name="HttpPost"/>
       </protocols>
     </webServices>
+    <pages validateRequest="false"></pages>
+    <httpRuntime requestValidationMode="2.0" />
      
     
   </system.web>
+  
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
